<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >
 
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/AppName"
        android:textSize="30sp" />

  <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Objective"
        android:layout_gravity="center_vertical|right"
         android:gravity="center"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="20sp"/>
  <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TeamMember"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="20sp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>
  
    <Button
        android:id="@+id/button1"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Instruction"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="20sp"/>
 
</RelativeLayout>