<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/l1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/l11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/l1"
        android:orientation="horizontal" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/l12"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/l21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/p1" >

            <Button
                android:id="@+id/b1"
                android:gravity="center"
                android:layout_marginTop="50sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GetMap" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/l22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/p2">

            <Button
                android:id="@+id/b2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50sp"
                android:text="@string/MyLocation" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/l23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/p3">

            <Button
                android:id="@+id/b3"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AllFaculty"
                android:layout_marginTop="50sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/l24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/p4">

            <Button
                android:id="@+id/b4"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SearchFaculty"
                android:layout_marginTop="50sp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>