<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayContact" >

    <!-- Root Layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/fr1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             >

            <Button
                android:id="@+id/b1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backHome"
                 android:layout_marginTop="80sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/fr2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_toRightOf="@+id/fr1" >

            <!-- Row1 -->

            <RelativeLayout
                android:id="@+id/r1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"          
                    android:text="@string/name"
                    android:textStyle="bold"
                    android:layout_marginTop="10sp" />

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/textView1"
                    android:inputType="text" >
                </EditText>
            </RelativeLayout>

            <!-- Row2 -->

            <RelativeLayout
                android:id="@+id/r2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/r1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/street"
                    android:textStyle="bold"
                    android:layout_marginTop="10sp" />

                <EditText
                    android:id="@+id/editTextStreet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_toRightOf="@+id/textView4">
                </EditText>
            </RelativeLayout>

            <!-- Row3 -->

            <RelativeLayout
                android:id="@+id/r3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/r2"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textStyle="bold"
                    android:layout_marginTop="10sp" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:layout_toRightOf="@+id/textView2" />
            </RelativeLayout>

            <!-- Row4 -->

            <RelativeLayout
                android:id="@+id/r4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/r3"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country"
                    android:textStyle="bold"
                    android:layout_marginTop="10sp" />

                <EditText
                    android:id="@+id/editTextCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_toRightOf="@+id/textView3"/>
            </RelativeLayout>

            <!-- Row5 -->
            <RelativeLayout
                android:id="@+id/r5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/r4"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textStyle="bold"
                    android:layout_marginTop="10sp" />

                <EditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone|text"
                    android:layout_toRightOf="@+id/textView5" />
            </RelativeLayout>

             <!-- Row6 -->
            <RelativeLayout
                android:id="@+id/r6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/r5"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latitude"
                    android:textStyle="bold"
                    android:layout_marginTop="10sp" />

                <EditText
                    android:id="@+id/editTextLati"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone|text"
                    android:layout_toRightOf="@+id/textView6" />
            </RelativeLayout>
            
             <!-- Row7 -->
            <RelativeLayout
                android:id="@+id/r7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/r6"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/longitude"
                    android:textStyle="bold"
                    android:layout_marginTop="10sp" />

                <EditText
                    android:id="@+id/editTextLongi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone|text"
                    android:layout_toRightOf="@+id/textView7" />
            </RelativeLayout>
            <!-- Row8 -->

            <RelativeLayout
                android:id="@+id/r8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/r7"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/button1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="run"
                    android:text="@string/save"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>